[package]
name = "bip0039"
version = "0.7.0"
authors = ["koushiro <koushiro.cqx@gmail.com>"]
edition = "2018"

[features]
default = ["std", "all-languages"]
std = [
  "hmac/std",
  "hex/std",
  "pbkdf2/std",
  "sha2/std",
  "unicode-normalization/std",
]

# Languages
# Note: English is the standard so always included
all-languages = [
  "chinese-simplified",
  "chinese-traditional",
  "czech",
  "french",
  "italian",
  "japanese",
  "korean",
  "spanish"
]
chinese-simplified = []
chinese-traditional = []
czech = []
french = []
italian = []
japanese = []
korean = []
spanish = []

[dependencies]
hmac = { version = "0.10.1", default-features = false }
hex = { version = "0.4.2", default-features = false }
pbkdf2 = { version = "0.6.0", default-features = false }
rand = { version = "0.7.3", optional = true }
sha2 = { version = "0.9.2", default-features = false }
unicode-normalization = { version = "0.1.16", default-features = false }

[dev-dependencies]
#criterion = "0.3.3"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
