[package]
name = "bips-benchmark"
version = "0.0.0"
authors = ["koushiro <koushiro.cqx@gmail.com>"]
edition = "2021"
resolver = "2"
publish = false

[dev-dependencies]
criterion = "0.7"

# BIP-0039 benchmarks
bip0039 = { path = "../bip0039" }
bip39 = { package = "tiny-bip39", version = "2.0", features = ["rand"] }
coins-bip39 = "0.12"
rand = "0.9"
rand_08 = { package = "rand", version = "0.8" }

[[bench]]
name = "bip0039"
path = "bip0039.rs"
harness = false
