[workspace]
members = [
    "benchmarks",
    "fuzz",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85.0"
license = "Apache-2.0"
homepage = "https://github.com/koushiro/rust-bips"
repository = "https://github.com/koushiro/rust-bips"

[package]
name = "bip0039"
version = "0.13.4"
authors = ["koushiro <koushiro.cqx@gmail.com>"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
build = "build.rs"

description = "Another Rust implementation of BIP-0039 standard"
readme = "README.md"
documentation = "https://docs.rs/bip0039"
keywords = ["bip39", "bitcoin", "crypto", "mnemonic"]
categories = ["cryptography", "no-std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std", "rand"]
std = [
    "hmac/std",
    "pbkdf2/std",
    "phf/std",
    "sha2/std",
    "unicode-normalization/std",
    "zeroize/std",
]
# Note: English is the standard so always included
all-languages = [
    "chinese-simplified",
    "chinese-traditional",
    "czech",
    "french",
    "italian",
    "japanese",
    "korean",
    "portuguese",
    "spanish",
]
chinese-simplified = []
chinese-traditional = []
czech = []
french = []
italian = []
japanese = []
korean = []
portuguese = []
spanish = []

[dependencies]
hmac = { version = "0.12", default-features = false }
pbkdf2 = { version = "0.12", default-features = false }
phf = { version = "0.13", default-features = false }
rand = { version = "0.10", optional = true }
sha2 = { version = "0.10", default-features = false }
unicode-normalization = { version = "0.1", default-features = false }
zeroize = { version = "1.8", default-features = false, features = ["alloc"] }

[build-dependencies]
anyhow = "1.0"
phf_codegen = "0.13"

[dev-dependencies]
const-hex = "1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
