[package]
name = "bip0032-fuzz"
version = "0.0.0"
authors = ["koushiro <koushiro.cqx@gmail.com>"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
bip0032 = { path = ".." }
bs58 = "0.5"
libfuzzer-sys = "0.4"

[[bin]]
name = "derive_path"
path = "fuzz_targets/derive_path.rs"
test = false
doc = false

[[bin]]
name = "parse_path"
path = "fuzz_targets/parse_path.rs"
test = false
doc = false

[[bin]]
name = "parse_xkey"
path = "fuzz_targets/parse_xkey.rs"
test = false
doc = false
