[package]
name = "bip0039-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = "0.4"

[dependencies.bip0039]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "generate"
path = "fuzz_targets/generate.rs"
test = false
doc = false

[[bin]]
name = "from_entropy"
path = "fuzz_targets/from_entropy.rs"
test = false
doc = false

[[bin]]
name = "from_phrase"
path = "fuzz_targets/from_phrase.rs"
test = false
doc = false
