[package]
name = "bip0039-fuzz"
version = "0.0.0"
authors = ["koushiro <koushiro.cqx@gmail.com>"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
bip0039 = { path = ".." }
libfuzzer-sys = "0.4"

[[bin]]
name = "generate"
path = "fuzz_targets/generate.rs"
test = false
doc = false

[[bin]]
name = "from_entropy"
path = "fuzz_targets/from_entropy.rs"
test = false
doc = false

[[bin]]
name = "from_phrase"
path = "fuzz_targets/from_phrase.rs"
test = false
doc = false
